codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 794
expression: terminal.backend()
---
"                                                                                "
"The model wants to apply changes                                                "
"                                                                                "
"This will grant write access to /tmp for the remainder of this session.         "
"                                                                                "
"▌Apply changes?                                                                 "
"▌ Yes   No, provide feedback                                                    "
"▌ Approve and apply the changes                                                 "
"                                                                                "
